Fixing mobile logo centered alignment

--- a/css/sass/_theme-responsive.scss
+++ b/css/sass/_theme-responsive.scss
@@ -33,8 +33,8 @@
         text-align: center;
     }
 
-    #hgroup > * {
-        float: none;
+    #logo.pull-left {
+        float: none !important;
     }
 
     .imageyup #head-wrapper {
